Created and tested objects for better coverage